Fix #63 misaligned padding on deprecated Builder banner titles

--- a/src/assets/scss/deprecated/_deprecated.scss
+++ b/src/assets/scss/deprecated/_deprecated.scss
@@ -58,7 +58,7 @@
 		background-color: rgba(255, 255, 255, .9);
 		color: $brand-crimson;
 		font-weight: 600;
-		padding: 1em 1rem .25rem;
+		padding: 1rem;
 	}
 
 	.builder-banner-inner-content {
@@ -68,7 +68,7 @@
 			background-color: #fff;
 			background-color: rgba(255, 255, 255, .9);
 			color: $text-color;
-			padding: 1.5rem 2rem;
+			padding: 0 1rem 1rem;
 		}
 
 	}
